# my-gpt

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
my_gpt/data/: config.py  loader.py  normalizers.py
my_gpt/interface/: chat.py  completion.py
my_gpt/model/: layers.py  model.py  module.py
my_gpt/scripts/: chat_app.py  train_tokenizer.py
my_gpt/tokenizer/: bpe.py  config.py  pretokenizer.py  special_tokens.py  tok.py  tokenizer.py  write_corpus.py
my_gpt/tokenizer/rustbpe/: Cargo.toml
my_gpt/tokenizer/rustbpe/src/: lib.rs
my_gpt/train/: optimizer.py  trainer.py  trainer_fsdp.py
my_gpt/utils/: report.py  settings.py
rbpe/: Cargo.toml  __init__.py  pyproject.toml
rbpe/src/: lib.rs
scripts/: chat_app.py  chat_console.py  dataset.py  evaluate.py  train_tokenizer.py
src/gpt_lib/data/: config.py  download.py  loader.py
src/gpt_lib/evaluate/: base.py
src/gpt_lib/interface/: benchmark.py  chat.py  completion.py
src/gpt_lib/model/: layers.py  loss.py  model.py  utils.py  wrapper.py
src/gpt_lib/tokenizer/: bpe.py  corpus.py  pretokenizer.py  tok.py  tokenizer.py
src/gpt_lib/train/: optimizer.py  trainer.py  trainer_fsdp.py
src/gpt_lib/utils/: common.py  configurator.py  default.py  distributed.py  report.py  schemas.py  special_tokens.py
src/my_gpt/: utils.py
src/my_gpt/data/: config.py  download.py  fine_web_edu.py  loader.py
src/my_gpt/evaluate/: bpb.py
src/my_gpt/interface/: config.py
src/my_gpt/model/: layers.py  loss.py  model.py
src/my_gpt/tokenizer/: bpe.py  corpus.py  pretokenizer.py  tok.py  tokenizer.py
src/my_gpt/train/: optimizer.py  trainer.py  trainer_fsdp.py
src/my_gpt/utils/: common.py  configurator.py  default.py  log.py  report.py  schemas.py
tests/: conftest.py
tests/model/: test_layers.py  test_model.py
