[project]
name = "gpt-lib"
version = "0.1.0"
description = "This project is the implementation of a small library to manage LLM training and inference from-scratch. It also includes an interface to chat with the model, and with models from 🤗 API, locally or remotly."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.3",
    "aiosignal>=1.4.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.0",
    "attrs>=25.4.0",
    "brotli>=1.2.0",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "datasets>=4.4.2",
    "dill>=0.4.0",
    "fastapi>=0.128.0",
    "ffmpy>=1.0.0",
    "filelock>=3.20.2",
    "fonttools>=4.61.1",
    "frozenlist>=1.8.0",
    "fsspec>=2025.10.0",
    "gradio>=3.18.0",
    "gradio-client>=2.0.2",
    "groovy>=0.1.2",
    "h11>=0.16.0",
    "hf-xet>=1.2.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jinja2>=3.1.6",
    "kiwisolver>=1.4.9",
    "load-dotenv>=0.1.0",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "mdurl>=0.1.2",
    "mpmath>=1.3.0",
    "multidict>=6.7.0",
    "multiprocess>=0.70.18",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "orjson>=3.11.5",
    "packaging>=24.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pluggy>=1.6.0",
    "propcache>=0.4.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydub>=0.25.1",
    "pygments>=2.17.2",
    "pyparsing>=3.3.1",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.21",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "safehttpx>=0.1.7",
    "safetensors>=0.7.0",
    "semantic-version>=2.10.0",
    "setuptools>=80.9.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "starlette>=0.50.0",
    "sympy>=1.14.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "tomlkit>=0.13.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "typer>=0.21.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.3",
    "urllib3>=2.6.2",
    "uvicorn>=0.40.0",
    "xxhash>=3.6.0",
    "yarl>=1.22.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.optional-dependencies]
cuda = [
    "flash-attn>=2.6.0; platform_system == 'Linux'",
]

[tool.setuptools]
package-dir = {"" = "./src/"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
managed = true
package = true
